// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItwCredentialClaimsSection should match the snapshot when claims are hidden 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      color="grey-700"
      defaultColor="black"
      defaultWeight="Semibold"
      font="TitilliumSansPro"
      fontStyle={
        Object {
          "fontSize": 18,
          "lineHeight": 25,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 18,
            "lineHeight": 25,
          },
          Object {
            "color": "#555C70",
            "fontFamily": "Titillium Sans Pro",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      weight="Semibold"
    >
      Personal data
    </Text>
    <View
      accessibilityLabel="[missing \\"en.features.itWallet.presentation.credentialDetails.actions.showClaimValues\\" translation]"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="toggle-claim-visibility"
    >
      <View
        style={
          Array [
            Object {
              "height": 24,
              "width": 24,
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "center",
            },
            Object {
              "transform": Array [
                Object {
                  "scale": undefined,
                },
              ],
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          animatedProps={
            Object {
              "color": undefined,
            }
          }
          bbHeight={24}
          bbWidth={24}
          focusable={false}
          height={24}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "color": "#0073E6",
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          tintColor="#0073E6"
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M1.707.293A1 1 0 0 0 .293 1.707l4.483 4.484A13.063 13.063 0 0 0 .63 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c1.931 0 3.763-.42 5.41-1.176l4.883 4.883a1 1 0 0 0 1.414-1.414l-22-22Zm19.099 16.27c1.02-.939 1.888-2.039 2.566-3.259.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4c-1.15 0-2.266.15-3.329.43l1.691 1.691a10.997 10.997 0 0 1 11.26 5.545.686.686 0 0 1 0 .667 11.05 11.05 0 0 1-2.233 2.815l1.416 1.416Zm-3.856-3.855a5 5 0 0 0-5.658-5.658l2.804 2.803.05.051 2.804 2.804Zm-14.573-1.04a11.055 11.055 0 0 1 3.846-4.03l1.605 1.605a5 5 0 0 0 6.929 6.929l1.125 1.124A10.977 10.977 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667ZM9 12c0-.463.105-.902.292-1.293l4.001 4A3 3 0 0 1 9 12Z"
              fill={
                Object {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityLabel="Nome [missing \\"en.features.itWallet.presentation.credentialDetails.hiddenClaim\\" translation]"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Nome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              ******
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Cognome [missing \\"en.features.itWallet.presentation.credentialDetails.hiddenClaim\\" translation]"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Cognome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              ******
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Età Attributo non riconosciuto"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Età
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              Attributo non riconosciuto
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
  </View>
</View>
`;

exports[`ItwCredentialClaimsSection should match the snapshot when claims are visible 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      color="grey-700"
      defaultColor="black"
      defaultWeight="Semibold"
      font="TitilliumSansPro"
      fontStyle={
        Object {
          "fontSize": 18,
          "lineHeight": 25,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 18,
            "lineHeight": 25,
          },
          Object {
            "color": "#555C70",
            "fontFamily": "Titillium Sans Pro",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      weight="Semibold"
    >
      Personal data
    </Text>
    <View
      accessibilityLabel="[missing \\"en.features.itWallet.presentation.credentialDetails.actions.hideClaimValues\\" translation]"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="toggle-claim-visibility"
    >
      <View
        style={
          Array [
            Object {
              "height": 24,
              "width": 24,
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "center",
            },
            Object {
              "transform": Array [
                Object {
                  "scale": undefined,
                },
              ],
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          animatedProps={
            Object {
              "color": undefined,
            }
          }
          bbHeight={24}
          bbWidth={24}
          focusable={false}
          height={24}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "color": "#0073E6",
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          tintColor="#0073E6"
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M2.377 11.667A10.997 10.997 0 0 1 12.001 6c4.138 0 7.744 2.285 9.623 5.666a.686.686 0 0 1 0 .667A10.997 10.997 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667zM12.001 4A12.997 12.997 0 0 0 .629 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c4.894 0 9.155-2.705 11.372-6.696.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4zM15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
              fill={
                Object {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityLabel="Nome Luigi"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Nome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              Luigi
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Cognome Rossi"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Cognome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              Rossi
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Età Attributo non riconosciuto"
      accessible={true}
      style={
        Object {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                Array [
                  Object {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  Object {
                    "color": "#555C70",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Età
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="Semibold"
              font="TitilliumSansPro"
              fontStyle={
                Object {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  Object {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Sans Pro",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="Semibold"
            >
              Attributo non riconosciuto
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
  </View>
</View>
`;
